
[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hubspace"
version = "1.1.2"
readme = "README.md"
authors = [{ name = "Leyla Becker", email = "git@jan-leila.com" }]
license = { file = "LICENSE" }
keywords = ["hubspace", "iot"]
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/jan-leila/hubspace-py"
